...
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/decepticonsRecycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/guideline"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingTop="25dp"
        android:clipToPadding="false"
...
        android:clipToPadding="false"
        android:clipChildren="false"
        >
        <android.support.v7.widget.AppCompatImageButton
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/addImageButton"
            android:src="@drawable/plus_icon"
            android:background="@null"
            android:scaleType="fitCenter"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_gravity="center_horizontal"
...
